# the-loop

./: .cz.toml  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.cursor-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  docs.yml  release.yml
.the-loop/: cli-config.schema.json  cli-config.yaml  collaborators.schema.json  collaborators.yaml  config.schema.json  config.yaml  external-tools.md  harness-config.schema.json  harness-config.yaml  manifest.yaml
.the-loop/templates/: bug.md  bugfix.md  capability.md  cli-config.yaml  collaborators.yaml  config.yaml  conflicts.md  decision.md  delivery-plan.md  design.md  epic.md  execution-log.md  learning.md  pr-briefing.md  requirements.md  story.md  tasks.md  webhook-event-prompt.md
cli/: README.md  pyproject.toml
cli/tests/: conftest.py  test_announce.py  test_cli.py  test_cli_config.py  test_config.py  test_eventlog.py  test_eventlog_integration.py  test_harness_usage.py  test_poll_command.py  test_poller.py  test_poller_integration.py  test_reactions.py  test_reactions_integration.py  test_routing.py  test_session_start_hook.py  test_tmux_runner.py  test_tmux_runner_integration.py  test_version_lockstep.py  test_webhook_routing_integration.py  test_workspace.py
cli/tests/fixtures/: test_checkout_integration.py
cli/the_loop/: __init__.py  __main__.py  announce.py  authz.py  cli.py  cli_config.py  config.py  eventlog.py  reactions.py  reload.py  runner.py  workspace.py
cli/the_loop/commands/: __init__.py  base.py  events.py  gh_poll.py  gh_webhook.py  poll.py  scenarios.py  sessions_cmd.py
cli/the_loop/harness/: __init__.py  base.py  claude_code.py  cursor_agent.py
cli/the_loop/poller/: __init__.py  base.py  github.py  poller.py
cli/the_loop/scenarios/: __init__.py
cli/the_loop/sessions/: __init__.py  registry.py
cli/the_loop/webhook/: __init__.py  dispatcher.py  router.py  server.py
commands/: brainstorm.md  create-design.md  create-tasks-plan.md  create-ticket.md  execute-tasks.md  finish-tasks.md  init.md  new-requirement.md  upgrade-the-loop.md  work-on.md  work-status.md
docs/: contributing.md  package.json  roadmap.md
docs-site/: index.md  package-lock.json
docs-site/.vitepress/: config.mts
docs-site/developer/: contributing.md
docs-site/guide/: how-it-works.md  installation.md  quickstart.md  what-is-the-loop.md
docs-site/reference/: commands.md  configuration.md
docs-site/scripts/: sync-content.mjs
docs/.vitepress/: config.mts
docs/architecture/: architecture.md
docs/capabilities/: capabilities.md  capability-docs.md  cli.md  configuration.md  design-artifacts.md  distribution.md  interactive-sessions.md  observability.md  release-publishing.md  spec-workflow.md  testing-and-contracts.md  token-economy.md  webhook-triggers.md
docs/decisions/: conflicts.md  decision-001.md  decision-002.md  decision-003.md  decision-004.md  decision-005.md  decision-006.md  decision-007.md  decision-008.md  decision-009.md  decision-010.md  decision-011.md  decision-012.md  decision-013.md  decision-014.md  decision-015.md  decision-016.md  decision-017.md  decision-018.md  decision-019.md  decision-020.md  decision-021.md  decision-022.md  decision-023.md  decision-024.md  decision-025.md  decision-026.md  decision-027.md  decision-028.md  decision-029.md  decision-030.md  decision-031.md  decision-032.md  decision-033.md  decision-034.md  decision-035.md  decisions.md
docs/delivery-plans/: issue-1-delivery-plan.md
docs/execution-logs/: issue-1-execution-log.md
docs/guide/: how-it-works.md  installation.md  quickstart.md  what-is-the-loop.md
docs/operating-model/: index.md
docs/reference/: commands.md  configuration.md
docs/reports/: gh-queries.md  index.md  labels-and-dashboards.md
docs/scripts/: sync-content.mjs  sync-content.mts
docs/specs/: index.md
hooks/: hooks.json  session-start.sh
learnings/: learning-001.md  learning-002.md  learning-003.md  learning-004.md  learning-005.md  learning-006.md  learning-007.md  learnings.md
rules/: the-loop.mdc
scripts/: check_commit_msg.py  check_version_lockstep.py  validate_config.py
(+125 files in other folders)
